2003-07-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/xml/repr-util.c (sp_xml_dtoa): Do not print trailing zeroes

	* src/xml/repr.c (sp_repr_document_new): Removed ATTLIST xmlns:xlink

	* src/libnr/nr-svp-private.h: New file

2003-07-09  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-stroke.c: Implement most functionality

	* src/libnr/nr-svp-uncross.c (nr_svl_uncross_full): Process some corner cases
	properly

2003-07-07  Masatake YAMATO  <jet@gyve.org>

	* src/shortcuts.c (sp_shortcut_table_load): set shortcut
	for SP_VERB_EDIT_SELECT_ALL.
	
	* src/selection-chemistry.[ch] (sp_edit_select_all): New function.

	* src/verbs.c (sp_verb_action_edit_perform): Added case
	SP_VERB_EDIT_CLEAR_ALL and SP_VERB_EDIT_SELECT_ALL.
	(SP_VERB_IS_EDIT): Extended to SP_VERB_EDIT_SELECT_ALL.

2003-07-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/svg/svg-length.c (sp_svg_length_set): New method

	* src/sp-spiral.c (sp_spiral_write): Write path here

	* src/sp-image.c (sp_image_repr_read_image): Treat NULL docbase as current directory

	* src/sp-gradient.c (sp_gradient_write): Merged code with flatten_attribute
	(sp_lineargradient_write): Ditto
	(sp_radialgradient_write): Ditto

	* src/rect-context.c (sp_rect_context_root_handler): Get motion hints

	* src/helper/sp-canvas.c (SP_CANVAS_UPDATE_PRIORITY): Use higher priority

	* src/document.c (SP_DOCUMENT_UPDATE_PRIORITY): Use higher priority

2003-06-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-ft2.c (nr_typeface_ft2_glyph_outline_get): Do not
	load outlines multiple times, fixes serious memleak

2003-06-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/text-edit.c (sp_text_edit_dialog): Added line spacing combo
	(sp_text_edit_dialog_update_object): Update line spacing
	(sp_text_edit_dialog_read_selection): Update control

	* src/sp-text.c (sp_text_set): Parse "sodipodi:linespacing"
	(sp_text_set_shape): Use line spacing

	* src/attributes.c: Added "sodipodi:linespacing"
